<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/listavatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@color/silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        />
        <TextView
            android:id="@+id/listfullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/fullname"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/listavatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listfullName"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@id/listavatar"
            app:layout_constraintTop_toBottomOf="@id/listfullName" />

        <TextView
            android:id="@+id/listrepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listusername"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/bg3"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/listavatar"
            app:layout_constraintTop_toBottomOf="@id/listusername" />

        <TextView
            android:id="@+id/listfollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listrepository"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg1"
            android:text="@string/followings"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/listavatar"
            app:layout_constraintTop_toBottomOf="@id/listrepository" />

        <TextView
            android:id="@+id/listfollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listrepository"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg2"
            android:text="@string/followers"
            app:layout_constraintStart_toEndOf="@id/listfollowing"
            app:layout_constraintTop_toBottomOf="@id/listrepository" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>