<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/followingavatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@color/silver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/followingfullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/fullname"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/followingavatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/followingusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/followingfullName"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@id/followingavatar"
            app:layout_constraintTop_toBottomOf="@id/followingfullName" />

        <TextView
            android:id="@+id/followingrepository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/followingusername"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/bg3"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/followingavatar"
            app:layout_constraintTop_toBottomOf="@id/followingusername" />

        <TextView
            android:id="@+id/followingfollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/followingrepository"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg1"
            android:text="@string/followings"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/followingavatar"
            app:layout_constraintTop_toBottomOf="@id/followingrepository" />

        <TextView
            android:id="@+id/followingfollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/followingrepository"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:background="@color/bg2"
            android:text="@string/followers"
            app:layout_constraintStart_toEndOf="@id/followingfollowing"
            app:layout_constraintTop_toBottomOf="@id/followingrepository" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>