<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/det_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:src="@color/silver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/det_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/fullname"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/det_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/det_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_fullName"
            android:layout_marginStart="8dp"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@id/det_avatar"
            app:layout_constraintTop_toBottomOf="@id/det_fullName" />

        <TextView
            android:id="@+id/det_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_username"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@color/bg3"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/det_avatar"
            app:layout_constraintTop_toBottomOf="@+id/det_location" />

        <TextView
            android:id="@+id/det_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_repository"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/bg1"
            android:text="@string/followings"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/det_avatar"
            app:layout_constraintTop_toBottomOf="@+id/det_repository" />

        <TextView
            android:id="@+id/det_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_repository"
            android:layout_marginStart="116dp"
            android:layout_marginTop="4dp"
            android:background="@color/bg2"
            android:text="@string/followers"
            app:layout_constraintStart_toEndOf="@+id/det_avatar"
            app:layout_constraintTop_toBottomOf="@+id/det_repository" />

        <TextView
            android:id="@+id/det_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_repository"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/bg2"
            android:text="@string/company"
            app:layout_constraintStart_toEndOf="@+id/det_avatar"
            app:layout_constraintTop_toBottomOf="@+id/det_username" />

        <TextView
            android:id="@+id/det_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/det_repository"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@color/bg2"
            android:text="@string/location"
            app:layout_constraintStart_toEndOf="@+id/det_avatar"
            app:layout_constraintTop_toBottomOf="@+id/det_company" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_200"
                    android:minHeight="?actionBarSize"
                    app:tabIndicatorFullWidth="false"
                    app:tabIndicatorHeight="2dp"
                    app:tabMode="fixed"
                    app:tabRippleColor="@null"
                    app:tabTextColor="@android:color/white" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/tabs" />
            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>